<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/teal_200"
        android:padding="24dp"
        android:text="@string/hello_world"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello"
        android:layout_centerHorizontal="true"
        android:text="@string/textview" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:autofillHints="what's it for?"
        android:hint="@string/write_here"
        android:inputType="text"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSend"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:text="@string/send"
        app:icon="@drawable/ic_baseline_send_24"
        app:iconGravity="textStart" />

    <TextView
        android:id="@+id/sendResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btSend"
        android:text="" />

    <LinearLayout
        android:id="@+id/iconBtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendResult"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/cookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/icon_with_a_cookie"
            android:padding="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/ic_baseline_cookie_24" />

        <ImageView
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/reload_button"
            android:padding="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/ic_baseline_repeat_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light">

        <Button
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="0.8"
            android:padding="@dimen/button_padding"
            android:text="@string/delete_history" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btToast"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.9"
            android:padding="@dimen/button_padding"
            android:text="@string/show_toast" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSnackbar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.9"
            android:padding="@dimen/button_padding"
            android:text="@string/show_snackbar" />
    </LinearLayout>
</RelativeLayout>